test/signal/negative/private_transaction_negative.ml
let _must_not_typecheck = Eta_signal_transaction.begin_pure
